--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,15 +31,14 @@ jobs:
         node-version: [12.x, 14.x]
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/download-artifact@main
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
+        node-version: ${{ matrix.node-version }}
     - uses: actions/download-artifact@main
       with:
         name: webpack artifacts
         path: public
-    - name: npm install, and test
     - name: npm install, and test
       run: |
         npm install
